tests/baselines/reference/jsContainerMergeTsDeclaration2.errors.txt
tests/cases/conformance/salsa/b.js(2,1): error TS2322: Type 'number' is not assignable to type '() => void'.


==== tests/cases/conformance/salsa/a.d.ts (0 errors) ====
    declare namespace C {
        function bar(): void
    }
==== tests/cases/conformance/salsa/b.js (1 errors) ====
    C.prototype = {};
    C.bar = 2;
    ~~~~~
!!! error TS2322: Type 'number' is not assignable to type '() => void'.
    